kubernetes/apps/webapp/components/httproute/namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placeholder
  labels:
    gateway.networking.k8s.io/access: "true"
